Create model and implement basic logic.

--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -46,7 +46,7 @@
             </div>
         </div>
         {% include 'core/blendschedules/LETdeskschedule.html' %}
-    {% elif blend_area == 'Hx' %}
+    {% elif blend_area == 'Hx_Desk' %}
         <div class="scheduleHeader">
             <h1>Blend Schedule for Horix Line</h1><br>
             <a href="/core/blend-schedule?blend-area=all">View All Schedules</a><br>
