--- a/app/core/templates/core/blendshortagesprojected.html
+++ b/app/core/templates/core/blendshortagesprojected.html
@@ -26,7 +26,7 @@
             <button id="create_list" style="display:none">Create Count List</button>
             <br> 
             <br>
-            <a href="/core/blend-schedule/?blend-area=Hx">Horix Blends</a> | 
+            <a href="/core/blend-schedule/?blend-area=Hx_Desk">Horix Blends</a> | 
             <a href="/core/blend-schedule/?blend-area=Dm">Drum Blends</a> | 
             <a href="/core/blend-schedule/?blend-area=Totes">Tote Blends</a>
             <br><br>
