--- a/app/core/templates/core/LETshortageRows/blackTintPasteShortage.html
+++ b/app/core/templates/core/LETshortageRows/blackTintPasteShortage.html
@@ -8,17 +8,18 @@
     <td data-label="Blend">841BLK.B</td>
     <td data-label="Description">BLEND-Tint Paste for black let</td>
     <td data-label="First Shortage">1.5</td>
-    <td data-label="Line" class="text-center"></td>
-    <td data-label="1wk Short">LET</td>
-    <td data-label="Total Short">395</td>
+    <td data-label="Line" class="text-center">LET</td>
+    <td data-label="1wk Short"></td>
+    <td data-label="Total Short">40</td>
     <td data-label="Schedule Status"></td>
-    <td data-label="When Short AFTER BLENDS">?????</td>
+    <td data-label="When Short AFTER BLENDS"></td>
+    <td data-label="Short Qty AFTER BLENDS"></td>
     {% if user.is_staff %}
     <td data-label="Lot Number" class="text-center lotNumCell">
         <button class="btn btn-secondary lotNumButton" 
             data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
             data-itemcode="841BLK.B" data-desc="BLEND-Tint Paste for black let" 
-            data-totalqty="395" data-line="Prod" data-desk="Desk_1">
+            data-totalqty="40" data-line="Prod" data-desk="LET_Desk">
             +
         </button>
     </td>
